tests/rgs/syntax_errors/and_no_right_operand.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF is_tired MYSELF AND:
        DO run.
